<resources>
    <string name="app_name">QR Code Scanner</string>
    <string name="play_sound">Play Sound</string>
    <string name="open_website_automatically">Open website</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="qr_amp_barcode_scanner">QR &amp; Barcode Scanner</string>
    <string name="scan_any_qr_code_or_barcode_to_get_nadditional_information_including_results">Scan any QR code or barcode to get additional information including results.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="qr_amp_bar_code_scanner">QR &amp; Bar Code Scanner</string>
    <string name="hold_your_device_over_a_qr_n_code_to_scan_it">Hold your device Over a QR\n code to scan it.</string>
    <string name="this_action_may_contains_the_ads">This action may contains the ads.</string>
    <string name="enter_app_link_here">Enter app Link here</string>
    <string name="create_qr_code">Create QR Code</string>
    <string name="_0">0</string>
    <string name="event_title">Event Title</string>
    <string name="all_day_event">All Day Event</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="email">Email</string>
    <string name="event_location">Event Location</string>
    <string name="description">Description</string>
    <string name="create_qr_codes">Create QR Code</string>
    <string name="enter_text_or_paste_from_clipboard">Enter text or paste from clipboard</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="street_address">Street Address</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="text_without_special_character">Text without special character</string>
    <string name="ad_is_loading">Ad is loading</string>
    <string name="templates">Templates</string>
    <string name="colors">Colors</string>
    <string name="logos">Logos</string>
    <string name="url">URL</string>
    <string name="code">Code:</string>
    <string name="format">Format:</string>
    <string name="notes">Notes:</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="open_website">Open Website</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_email_text">Enter Email Text</string>
    <string name="supported_amp_unsupported_codes">Supported &amp; Unsupported codes</string>
    <string name="scanning_tips">Scanning Tips</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="create_barcode">Create BarCode</string>
    <string name="see_all">See All</string>
    <string name="supported_codes">Supported Codes</string>
    <string name="unsupported_codes">Unsupported Codes</string>
    <string name="enter_location">Enter Location</string>
    <string name="save">Save</string>
    <string name="scan_setting">Scan Setting</string>
    <string name="vibrate">Vibrate</string>
    <string name="general">General</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more">More (Ad)</string>
    <string name="feedback">Feedback</string>
    <string name="website">Website</string>
    <string name="view_code">View Code</string>
    <string name="qr_amp_barcode_reader">QR &amp; BarCode Reader</string>
    <string name="get_specific_information_by_adding_custom_nwebsites_into_the_barcode_search">Get specific information by adding custom\nwebsites into the barcode search</string>
    <string name="let_s_start">Start</string>
    <string name="detect_codes_within_picture_files_nor_scan_directly_using_the_camera">Detect codes within picture files or scan directly using the camera</string>
    <string name="network_name">Network Name</string>
    <string name="password">Password</string>
    <string name="dialog_title_discard_changes">Discard Changes</string>
    <string name="dialog_message_discard_changes">Are you sure you want to discard all changes?</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="languages">Select the Language</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="daily_motion">Daily Motion</string>
    <string name="apps">Apps</string>
    <string name="clipboard">Clipboard</string>
    <string name="contact">Contact</string>
    <string name="wifi">Wifi</string>
    <string name="location">Location</string>
    <string name="calender">Calender</string>
    <string name="batch_scanner">Batch Scanner</string>
    <string name="qr_code_reader">Qr Code Reader</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="qr_code_creation">Qr Code Creation</string>
    <string name="scanner_tips">Scanner Tips</string>
    <string name="settings">Settings</string>
    <string name="bar_code_reader">Bar Code Reader</string>
    <string name="contact_info">Contact Info</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="batch">Batch</string>
    <string name="uppercase_text_without_special_characters">uppercase text without special characters</string>
    <string name="enter_digits_only">Enter digits only</string>
    <string name="enter_even_digits">Enter even digits</string>
    <string name="enter_12_digits">Enter 12 digits</string>
    <string name="enter_7_digits">Enter 7 digits</string>
    <string name="enter_7_digits_starting_with_1">Enter 7 digits starting with 1</string>
    <string name="enter_11_digits_only">Enter 11 digits only</string>
    <string name="text_without_special_characters">Text without special characters</string>
    <string name="invalid_input">Invalid input</string>
    <string name="admod_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admod_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admod_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admod_interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admod_app_open_ad_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admod_app_reward_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admod_app_reward_inter_id" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
    <string name="fan_interstitial_id" translatable="false">1088964791852832_1088965305186114</string>
    <string name="fan_native_id" translatable="false">1088964791852832_1088965385186106</string>
    <string name="fan_banner_id" translatable="false">1088964791852832_1088965248519453</string>
    <string name="fan_native_banner_id" translatable="false">1088964791852832_1088965481852763</string>
    <string name="fan_reward_id" translatable="false">1088964791852832_1088965625186082</string>
    <string name="facebook_app_id" translatable="false">1275652413377261</string>
    <string name="applovin_test_inter" translatable="false">c630fe3686063741</string>
    <string name="applovin_test_banner" translatable="false">31cdd2e81ad9805e</string>
    <string name="applovin_test_native" translatable="false">b8f6f81612cddf23</string>
    <string name="applovin_test_reward" translatable="false">5ac0003d6da0d104</string>
    <string name="language" translatable="false">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="china" translatable="false">China</string>
    <string name="france" translatable="false">France</string>
    <string name="label_create_type">Create type</string>
    <string name="qr_templates">QR Templates</string>
    <string name="label_languages">Languages</string>
    <string name="done">Done</string>
    <string name="save_image">Save Image</string>
    <string name="paste_code_on_image">Paste Code on Image</string>
    <string name="no_data_found">No Data Found</string>
    <string name="label_we_build_what_you_desire">We will build what you need</string>
    <string name="label_select_features_fit_your_needs">Select features you desire</string>
    <string name="label_scan_bar_code">Scan Barcode</string>
    <string name="label_create_pdf">Create PDF</string>
    <string name="label_translate_image">Translate Image</string>
    <string name="label_search_image">Search Image</string>
    <string name="label_search_Product">Search Product</string>
    <string name="please_check_the_checkbox">Please select an option</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_preview_image">PreviewImageActivity</string>
    <string name="detect_lenguage">Detect Lenguage</string>
    <string name="translate">Translate</string>
    <string name="search">Search</string>
    <string name="proceed_to_next">Proceed to next</string>
    <string name="translated_text">Translated Text</string>
    <string name="enter_text">Enter Text</string>
    <string name="text_translator">Text Translator</string>
    <string name="ocr">OCR</string>
    <string name="translator">Translator</string>
    <string name="crop_image">Crop Image</string>
    <string name="crop">Crop</string>
    <string name="all_languages">All Languages</string>
    <string name="flag">Flag</string>
    <string name="translate_to">Translate to</string>
    <string name="type_here_to_translate">Type here to translate</string>
    <string name="scan_with_your_camera">Scan with your camera</string>
    <string name="translate_image">Translate Image</string>
    <string name="batch_scan">Batch Scan</string>
    <string name="create_document">Create Document</string>
    <string name="scan">Scan</string>
    <string name="discover_new_thing_as_blind_box_with_qr_scan_and_image_translation">Discover new thing as blind box with QR scan and image translation</string>
    <string name="stay_tuned_to_these_awesome_things">Stay tuned to these awesome things</string>
    <string name="awesome_upcoming_feature">Awesome upcoming feature:</string>
    <string name="image_search">• image search</string>
    <string name="object_detection">• object detection</string>
    <string name="animated_qr_creation">• animated QR creation</string>
    <string name="augmented_reality_ar">• augmented reality (AR)</string>
    <string name="new_awesome_qr_style">New Awesome QR style</string>
    <string name="yes_i_m_in">Yes, I\'m in</string>
    <string name="remind_me_late">Remind me later</string>
    <string name="update_me_daily_at">Update me daily at</string>
    <string name="Tips">Tips</string>
    <string name="Finish">Finish</string>
    <string name="TooBlurry">Too Blurry</string>
    <string name="Toobright">Too bright</string>
    <string name="Excellent">Excellent</string>
    <string name="discard">Discard</string>
    <string name="what_would_you_like_to_do_with_nyour_post">What would you like to do\nwith your post?</string>
    <string name="keep_editing">Keep editing</string>
</resources>