<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appcolor"
    tools:context=".fragments.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/first_name"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/last_name"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/phone_number"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvCompanyName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/company_name"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />


    <EditText
        android:id="@+id/tvJobTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/job_title"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/street_address"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />


    <EditText
        android:id="@+id/tvCountry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/country"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/tvPostalCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:drawablePadding="12dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/postal_code"
        android:fontFamily="@font/lexend"
        android:paddingStart="12dp"
        android:paddingEnd="12dp" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBarCode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/appBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailText">


        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_createcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/create_qr_code"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>



</ScrollView>