<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:background="@drawable/rounded_bg">

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/appBlue"
        android:src="@drawable/ic_fullscreenimage"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_bold"
            android:text="@string/stay_tuned_to_these_awesome_things"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/lexend"
            android:gravity="center_vertical"
            android:text="@string/awesome_upcoming_feature"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:drawableStartCompat="@drawable/icon_fullscreen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:fontFamily="@font/lexend"
            android:text="@string/image_search"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:fontFamily="@font/lexend"
            android:text="@string/object_detection"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:fontFamily="@font/lexend"
            android:text="@string/animated_qr_creation"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:fontFamily="@font/lexend"
            android:text="@string/augmented_reality_ar"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/icon_fullscreen"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/lexend"
            android:gravity="center_vertical"
            android:text="@string/new_awesome_qr_style"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/icon_fullscreen"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/lexend"
            android:text="@string/discover_new_thing_as_blind_box_with_qr_scan_and_image_translation"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lltime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.325">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/lexend"
            android:gravity="center_vertical"
            android:text="@string/update_me_daily_at"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/lexend_bold"
            android:gravity="center_vertical"
            android:text="5:01 PM"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tv1"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintEnd_toStartOf="@+id/tvEdit"
            app:layout_constraintTop_toTopOf="@+id/tv1" />

        <ImageView
            android:id="@+id/tvEdit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_edit_time"
            app:layout_constraintBottom_toBottomOf="@+id/tvTime"
            app:layout_constraintStart_toEndOf="@+id/tvTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivDoneNotificationTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_bg_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lltime" />


    <TextView
        android:id="@+id/btnDoneNotificationTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/lexend_bold"
        android:gravity="center"
        android:text="@string/yes_i_m_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDoneNotificationTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lltime" />

    <TextView
        android:id="@+id/tvRemindMeLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/remind_me_late"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDoneNotificationTime" />

</androidx.constraintlayout.widget.ConstraintLayout>