<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_rounded"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTipsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tips"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#252525"
        android:layout_gravity="start"
        android:fontFamily="@font/poppins"
        android:drawableEnd="@drawable/ic_close"
        android:drawableTint="#252525" />

    <!-- Excellent QR -->
    <ImageView
        android:id="@+id/ivExcellentQR"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_qr_border"
        android:scaleType="centerInside"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/iv_excellent" />

    <TextView
        android:id="@+id/tvExcellent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Excellent"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="#252525"
        android:fontFamily="@font/poppins_medium"
        android:paddingBottom="12dp"/>

    <!-- Bad QR examples -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/ivTooBright"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/bg_qr_border"
                android:scaleType="centerInside"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/iv_toobright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Toobright"
                android:textColor="#252525"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <ImageView
                android:id="@+id/ivTooBlurry"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/bg_qr_border"
                android:scaleType="centerInside"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/iv_tooblury" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TooBlurry"
                android:textColor="#252525"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center"
                android:paddingTop="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Finish Button -->
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Finish"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0188FE"
        android:textColor="@android:color/white"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:background="@drawable/bg_button_rounded"/>

</LinearLayout>
