<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_would_you_like_to_do_with_nyour_post"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_semibold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnDiscard"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_primary"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_delete"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/lexend_semibold"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnKeep"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_secondary"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/keep_editing"
        android:textAllCaps="false"
        android:textColor="#000000" />

</LinearLayout>
